src/styles/layout/_header.scss
nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 40px;

  @include respond-to(medium) {
    justify-content: flex-start;
  }

  .logo {
    position: relative;
    z-index: 10;
    width: 100px;
    height: 100px;
    display: flex;
    flex-shrink: 0;
    padding: 18px;
    border-radius: 50%;
    border: none;
    background-color: #fff;
    transition: all .3s;

    &::before, &::after {
      content: "";
      position: absolute;
      width: 100%;
      height: 100%;
      border-radius: 50%;
      opacity: 0;
      animation: fade-in 1s 1.5s linear forwards;
      transition: all .3s ease-out;
    }

    &::before {
      top: 5px;
      left: 5px;
      border: 4px solid $green;
    }

    &::after {
      top: -5px;
      left: -5px;
      border: 4px solid $blue;
    }

    @include respond-to(medium){
      width: 120px;
      height: 120px;
      padding: 20px 20px 20px 30px;
    }

    @include on-event {
      &::before, &::after {
        top: 0;
        left: 0;
      }
    }

    .logo-letters {
      height: 100%;
      width: 100%;
      fill: transparent;
      stroke-width: 2px;
      transition: all .3s;

      .first-letter, .second-letter {
        stroke-dasharray: 1000;
        stroke-dashoffset: 1000;
      }

      .first-letter {
        stroke: $blue;
        animation: dash 2s linear forwards, fill-blue 1s 1.5s linear forwards;
      }

      .second-letter {
        stroke: $green;
        animation: dash 3s linear forwards, fill-green 1s 1.5s linear forwards;
      }

      @keyframes fill-blue {
        to {
          fill: $blue;
        }
      }

      @keyframes fill-green {
        to {
          fill: $green;
        }
      }

      @keyframes dash {
        to {
          stroke-dashoffset: 0;
        }
      }
    }
  }

  .menu-toggle {
    z-index: 200;
    background-color: transparent;
    outline: none;

    &::after {
      content: none;
    }

    @include respond-to(medium) {
      display: none;
    }

    &.open, &:hover {
      .top-bun {
        transform: translateY(-10px);
      }

      .salad {
        transform: translateY(5px);
      }

      .meat {
        transform: translateY(-5px);
      }

      .bottom-bun {
        transform: translateY(10px);
      }
    }

    &.open {
      position: fixed;
      right: 20px;

      ~ .main-nav {
        display: block;
        position: fixed;
        z-index: 100;
        top: 0;
        left: 0;
        height: 100%;
        width: calc(100% + 20px);
        margin-left: -20px;
        padding: 120px 20px 0 0;
        text-align: right;
        background-image: linear-gradient(to bottom right, $blue 0%, $green 100%);
        animation: none;

        a {
          @include on-event {
            color: $text-color;
          }
        }
      }
    }

    .menu-icon {
      height: 60px;
      width: 60px;

      g, path {
        transition: all .3s ease-out;
      }
    }

    .menu-text {
      font-size: 1rem;
      text-transform: uppercase;
      color: $text-color;
    }
  }

  .main-nav {
    display: none;
    position: relative;
    align-items: center;
    height: 100%;
    margin: 0 0 0 20px;
    padding: 0;
    animation: fade-in-right 1s ease-out;

    @include respond-to(medium) {
      display: flex;
    }

    @include on-event {
      .line {
        opacity: 1;
      }
    }

    li {
      margin: 20px;
      list-style: none;
      font-size: 2rem;

      @include on-event {
        &:nth-child(1) ~ .line {
          left: 0;
        }
        &:nth-child(2) ~ .line {
          left: 180px;
        }
        &:nth-child(3) ~ .line {
          left: 370px;
        }
      }

      &.active {
        &:nth-child(1) ~ .line {
          left: 0;
        }
        &:nth-child(2) ~ .line {
          left: 180px;
        }
        &:nth-child(3) ~ .line {
          left: 370px;
        }

        a {
          color: $link-color;
        }
      }

      a {
        border: none;
        color: $text-color;
        text-decoration: none;
        text-transform: uppercase;
        
        @include on-event {
          color: $link-color;
          text-decoration: none;
          font-weight: normal;
        }
      }
    }

    .line {
      opacity: 0;
      position: absolute;
      left: -157px;
      bottom: -10px;
      transition: 0.4s ease-out;
      width: 110px;
      height: 6px;
      background: $link-color;
    }
  }
}

